--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </script>
 </head>
 <body class="max-w-[1440px] mx-auto">
-    <header class="w-11/12 mx-auto">
+    <header class="w-11/12 mx-auto shadow-sm">
         <!-- navbar -->
         <div class="navbar bg-base-100 font-Manrope">
             <div class="navbar-start w-full md:w-1/2 flex-row-reverse md:flex-row justify-between md:justify-start">
@@ -83,18 +83,33 @@
                 <p class="w-10 h-10 flex items-center justify-center border shadow-md bg-white rounded-full "><i
                         class="fa-solid fa-cart-shopping"></i></p>
 
-                <button class="bg-primary py-2 px-3 rounded-2xl flex space-x-1 font-bold">
+                <button class="bg-primary py-2 px-3 rounded-3xl flex space-x-1 font-bold">
                     <p>Book Consult</p>
                     <p class="w-6 h-6 bg-[#1C1C1C] rounded-full"><i
                             class="fa-solid fa-arrow-right -rotate-45 text-white"></i></p>
                 </button>
             </div>
         </div>
-
-
-
-
         <!-- banner -->
+        <div class="hero min-h-screen">
+            <div class="mt-8 text-center">
+              <div class="flex flex-col justify-center items-center">
+                <div><img src="./assets/banner.png" alt=""></div>
+                <h1 class="text-3xl text-secondary md:text-6xl font-bold w-full md:w-10/12 p-1">A barn house of this design has a striking appearance</h1>
+                <p class="py-6 w-full md:w-8/12 text-[#494949] font-semibold">
+                  Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
+                  quasi. In deleniti eaque aut repudiandae et a id nisi.
+                </p>
+              </div>
+              <div class="flex justify-center">
+                <button class="w-full md:w-auto bg-primary bg-opacity-50 py-3 px-4 rounded-3xl flex justify-center space-x-2 font-bold">
+                    <p>Vies Details</p>
+                    <p class="w-6 h-6 bg-primary rounded-full"><i
+                            class="fa-solid fa-arrow-right -rotate-45 text-secondary "></i></p>
+                </button>
+              </div>
+            </div>
+          </div>
 
     </header>
     <main>
