--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         primary: '#ABEF5F',
                         secondary: '#212121',
                         body: '#FFFFFF',
-                        accent: '#ABEF5F80'
+                        accent: '#494949'
                     },
                     fontFamily: {
                         Manrope: 'Manrope'
@@ -38,8 +38,9 @@
         }
     </script>
 </head>
+
 <body class="max-w-[1440px] mx-auto">
-    <header class="w-11/12 mx-auto shadow-sm">
+    <header class="w-11/12 mx-auto shadow-sm pb-6">
         <!-- navbar -->
         <div class="navbar bg-base-100 font-Manrope">
             <div class="navbar-start w-full md:w-1/2 flex-row-reverse md:flex-row justify-between md:justify-start">
@@ -93,27 +94,74 @@
         <!-- banner -->
         <div class="hero min-h-screen">
             <div class="mt-8 text-center">
-              <div class="flex flex-col justify-center items-center">
-                <div><img src="./assets/banner.png" alt=""></div>
-                <h1 class="text-3xl text-secondary md:text-6xl font-bold w-full md:w-10/12 p-1">A barn house of this design has a striking appearance</h1>
-                <p class="py-6 w-full md:w-8/12 text-[#494949] font-semibold">
-                  Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
-                  quasi. In deleniti eaque aut repudiandae et a id nisi.
-                </p>
-              </div>
-              <div class="flex justify-center">
-                <button class="w-full md:w-auto bg-primary bg-opacity-50 py-3 px-4 rounded-3xl flex justify-center space-x-2 font-bold">
-                    <p>Vies Details</p>
-                    <p class="w-6 h-6 bg-primary rounded-full"><i
-                            class="fa-solid fa-arrow-right -rotate-45 text-secondary "></i></p>
-                </button>
-              </div>
+                <div class="flex flex-col justify-center items-center">
+                    <div><img src="./assets/banner.png" alt=""></div>
+                    <h1 class="text-3xl text-secondary md:text-6xl font-bold w-full md:w-10/12 p-1">A barn house of this
+                        design has a striking appearance</h1>
+                    <p class="py-6 w-full md:w-8/12 text-accent font-semibold">
+                        Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
+                        quasi. In deleniti eaque aut repudiandae et a id nisi.
+                    </p>
+                </div>
+                <div class="flex justify-center">
+                    <button
+                        class="w-full md:w-auto bg-primary bg-opacity-50 py-3 px-4 rounded-3xl flex justify-center space-x-2 font-bold">
+                        <p>Vies Details</p>
+                        <p class="w-6 h-6 bg-primary rounded-full"><i
+                                class="fa-solid fa-arrow-right -rotate-45 text-secondary "></i></p>
+                    </button>
+                </div>
             </div>
-          </div>
-
+        </div>
     </header>
     <main>
+        <!-- About -->
+        <section class="w-11/12 mx-auto mt-16">
+           <div class="flex flex-col md:flex-row mt-5">
+             <!-- section contant -->
+             <div class="w-full md:w-1/2 relative flex flex-col justify-between">
+                <div class="text-center md:text-left"><button class="py-2 px-3 text-2xl text-accent font-bold rounded-3xl shadow-md"><i class="fa-solid fa-arrow-right"></i> About Us</button></div>
 
+                <div class="text-center md:text-left">
+                    <h1 class="text-2xl md:text-4xl text-secondary font-bold w-full md:w-9/12 mt-3 mb-3">We design thoughtful, liveable spaces</h1>
+                    <p class="text-accent">The barn house captivates with its blend of rustic charm and 
+                        modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                </div>
+                <!-- card -->
+                <div class="pr-0 md:pr-7">
+                    <!-- card-1 -->
+                    <div class="card card-side bg-base-100 shadow-xl my-5 p-1 md:pl-4">
+                        <figure>
+                          <img
+                            src="./assets/commercial.png"
+                            alt="Movie" />
+                        </figure>
+                        <div class="p-4 md:card-body">
+                          <h2 class="card-title font-bold text-accent">Commercial</h2>
+                          <p class="text-[#737373] w-full md:w-9/12">The barn house captivates with its blend of rustic charm and modern.</p>
+                        </div>
+                      </div>
+                    <!-- card-2 -->
+                    <div class="card card-side bg-base-100 shadow-xl md:pl-4">
+                        <figure class="">
+                          <img
+                            src="./assets/residential.png"
+                            alt="Movie" />
+                        </figure>
+                        <div class="p-4 md:card-body">
+                          <h2 class="card-title font-bold text-accent">Residential</h2>
+                          <p class="text-[#737373] w-full md:w-9/12">The barn house captivates with its blend of rustic charm and modern.</p>
+                        </div>
+                      </div>
+                </div>
+                <div class="max-w-max absolute hidden md:block -top-12 -left-12"><img src="./assets/Vector.png" alt=""></div>
+             </div>
+             <!-- section img -->
+             <div class="w-full mt-4 md:mt-0 md:w-1/2 flex justify-end">
+                <img src="./assets/Rectangle.png" alt="">
+             </div>
+           </div>
+        </section>
     </main>
     <footer>
 
