about section complete

--- a/index.html
+++ b/index.html
@@ -161,6 +161,35 @@
                 <img src="./assets/Rectangle.png" alt="">
              </div>
            </div>
+
+           
+             <!-- state -->
+             <div class="py-8 md:py-10 px-2 md:px-18 shadow-2xl rounded-xl mt-28 flex flex-col md:flex-row space-y-6 md:space-y-0 justify-around">
+                <!-- state box-1 -->
+                 <div class="flex flex-col justify-center items-center space-y-2">
+                    <p><i class="fa-solid fa-message text-2xl"></i></p>
+                    <h1 class="font-bold text-4xl text-accent">235+</h1>
+                    <p class="text-[#737373] font-bold">Happy Client Review</p>
+                 </div>
+                 <!-- state box-2 -->
+                 <div class="flex flex-col justify-center items-center space-y-2">
+                    <p><i class="fa-solid fa-house text-2xl"></i></p>
+                    <h1 class="font-bold text-4xl text-accent">50+</h1>
+                    <p class="text-[#737373] font-bold">Work Depertments</p>
+                 </div>
+                 <!-- state box-3 -->
+                 <div class="flex flex-col justify-center items-center space-y-2">
+                    <p><i class="fa-solid fa-user text-2xl"></i></p>
+                    <h1 class="font-bold text-4xl text-accent">30k+</h1>
+                    <p class="text-[#737373] font-bold">Our Happy Client</p>
+                 </div>
+                 <!-- state box-4 -->
+                 <div class="flex flex-col justify-center items-center space-y-2">
+                    <p><i class="fa-solid fa-clipboard-user text-2xl"></i></p>
+                    <h1 class="font-bold text-4xl text-accent">307+</h1>
+                    <p class="text-[#737373] font-bold">Staff Members</p>
+                 </div>
+              </div>
         </section>
     </main>
     <footer>
