--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                         Manrope: 'Manrope'
                     },
                     backgroundImage: {
+                        'custom-gradient': 'linear-gradient(0deg, rgb(255, 255, 255), rgba(255, 255, 255, 0) 100%)',
                         form_bg: "url('./assets/bg.jpg')"
                     }
                 }
@@ -40,7 +41,7 @@
 </head>
 
 <body class="max-w-[1440px] mx-auto">
-    <header class="w-11/12 mx-auto shadow-sm pb-6">
+    <header class="w-11/12 bg-custom-gradient mx-auto shadow-md pb-6">
         <!-- navbar -->
         <div class="navbar bg-base-100 font-Manrope">
             <div class="navbar-start w-full md:w-1/2 flex-row-reverse md:flex-row justify-between md:justify-start">
@@ -116,7 +117,7 @@
     </header>
     <main>
         <!-- About -->
-        <section class="w-11/12 mx-auto mt-16">
+        <section class="w-11/12 mx-auto mt-16 md:mt-32">
            <div class="flex flex-col md:flex-row mt-5">
              <!-- section contant -->
              <div class="w-full md:w-1/2 relative flex flex-col justify-between">
@@ -131,7 +132,7 @@
                 <div class="pr-0 md:pr-7">
                     <!-- card-1 -->
                     <div class="card card-side bg-base-100 shadow-xl my-5 p-1 md:pl-4">
-                        <figure>
+                        <figure class="pl-2">
                           <img
                             src="./assets/commercial.png"
                             alt="Movie" />
@@ -143,7 +144,7 @@
                       </div>
                     <!-- card-2 -->
                     <div class="card card-side bg-base-100 shadow-xl md:pl-4">
-                        <figure class="">
+                        <figure class="pl-2">
                           <img
                             src="./assets/residential.png"
                             alt="Movie" />
@@ -191,6 +192,45 @@
                  </div>
               </div>
         </section>
+
+        <!-- our Work Process -->
+         <section class="w-11/12 mx-auto mt-16 md:mt-28">
+            <!-- section content -->
+             <div class="flex flex-col items-center space-y-4 w-full md:w-9/12 mx-auto mb-7">
+                <div class="text-center md:text-left"><button class="py-2 px-3 text-2xl text-accent font-bold rounded-3xl bg-white shadow-md"><i class="fa-solid fa-arrow-right"></i> About Us</button></div>
+                <h1 class="font-bold text-3xl md:text-5xl text-secondary">Our Works Process</h1>
+                <p class="text-accent font-semibold w-8/12 text-center">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+
+             </div>
+
+             <!-- section card -->
+              <div class="flex flex-col md:flex-row gap-6">
+                <!-- card-1 -->
+                 <div class="border p-3 md:p-6 bg-[#E7C1D3] rounded-xl">
+                    <img src="./assets/concept.png" alt="">
+                    <h1 class="font-bold text-3xl mt-4">Concept</h1>
+                    <p class="text-accent font-semibold mt-2">The barn house captivates with its blend of rustic charm and modern.</p>
+                 </div>
+                <!-- card-2 -->
+                 <div class="border p-3 md:p-6 bg-[#EFDA6E] rounded-xl">
+                    <img src="./assets/flow-chart.png" alt="">
+                    <h1 class="font-bold text-3xl mt-4">Disign Process</h1>
+                    <p class="text-accent font-semibold mt-2">The barn house captivates with its blend of rustic charm and modern.</p>
+                 </div>
+                <!-- card-3 -->
+                 <div class="border p-3 md:p-6 bg-[#A4DAC3] rounded-xl">
+                    <img src="./assets/vision.png" alt="">
+                    <h1 class="font-bold text-3xl mt-4">Super Vision</h1>
+                    <p class="text-accent font-semibold mt-2">The barn house captivates with its blend of rustic charm and modern.</p>
+                 </div>
+                <!-- card-4 -->
+                 <div class="border p-3 md:p-6 bg-[#77AAEA] rounded-xl">
+                    <img src="./assets/budget-planning.png" alt="">
+                    <h1 class="font-bold text-3xl mt-4">Budget Planning</h1>
+                    <p class="text-accent font-semibold mt-2">The barn house captivates with its blend of rustic charm and modern.</p>
+                 </div>
+              </div>
+         </section>
     </main>
     <footer>
 
