--- a/index.html
+++ b/index.html
@@ -118,119 +118,197 @@
     <main>
         <!-- About -->
         <section class="w-11/12 mx-auto mt-16 md:mt-32">
-           <div class="flex flex-col md:flex-row mt-5">
-             <!-- section contant -->
-             <div class="w-full md:w-1/2 relative flex flex-col justify-between">
-                <div class="text-center md:text-left"><button class="py-2 px-3 text-2xl text-accent font-bold rounded-3xl shadow-md"><i class="fa-solid fa-arrow-right"></i> About Us</button></div>
+            <div class="flex flex-col md:flex-row mt-5">
+                <!-- section contant -->
+                <div class="w-full md:w-1/2 relative flex flex-col justify-between">
+                    <div class="text-center md:text-left"><button
+                            class="py-2 px-3 text-2xl text-accent font-bold rounded-3xl shadow-md"><i
+                                class="fa-solid fa-arrow-right"></i> About Us</button></div>
 
-                <div class="text-center md:text-left">
-                    <h1 class="text-2xl md:text-4xl text-secondary font-bold w-full md:w-9/12 mt-3 mb-3">We design thoughtful, liveable spaces</h1>
-                    <p class="text-accent">The barn house captivates with its blend of rustic charm and 
-                        modern sophistication, featuring weathered wood, sleek metal accents.</p>
-                </div>
-                <!-- card -->
-                <div class="pr-0 md:pr-7">
-                    <!-- card-1 -->
-                    <div class="card card-side bg-base-100 shadow-xl my-5 p-1 md:pl-4">
-                        <figure class="pl-2">
-                          <img
-                            src="./assets/commercial.png"
-                            alt="Movie" />
-                        </figure>
-                        <div class="p-4 md:card-body">
-                          <h2 class="card-title font-bold text-accent">Commercial</h2>
-                          <p class="text-[#737373] w-full md:w-9/12">The barn house captivates with its blend of rustic charm and modern.</p>
+                    <div class="text-center md:text-left">
+                        <h1 class="text-2xl md:text-4xl text-secondary font-bold w-full md:w-9/12 mt-3 mb-3">We design
+                            thoughtful, liveable spaces</h1>
+                        <p class="text-accent">The barn house captivates with its blend of rustic charm and
+                            modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                    </div>
+                    <!-- card -->
+                    <div class="pr-0 md:pr-7">
+                        <!-- card-1 -->
+                        <div class="card card-side bg-base-100 shadow-xl my-5 p-1 md:pl-4">
+                            <figure class="pl-2">
+                                <img src="./assets/commercial.png" alt="Movie" />
+                            </figure>
+                            <div class="p-4 md:card-body">
+                                <h2 class="card-title font-bold text-accent">Commercial</h2>
+                                <p class="text-[#737373] w-full md:w-9/12">The barn house captivates with its blend of
+                                    rustic charm and modern.</p>
+                            </div>
                         </div>
-                      </div>
-                    <!-- card-2 -->
-                    <div class="card card-side bg-base-100 shadow-xl md:pl-4">
-                        <figure class="pl-2">
-                          <img
-                            src="./assets/residential.png"
-                            alt="Movie" />
-                        </figure>
-                        <div class="p-4 md:card-body">
-                          <h2 class="card-title font-bold text-accent">Residential</h2>
-                          <p class="text-[#737373] w-full md:w-9/12">The barn house captivates with its blend of rustic charm and modern.</p>
+                        <!-- card-2 -->
+                        <div class="card card-side bg-base-100 shadow-xl md:pl-4">
+                            <figure class="pl-2">
+                                <img src="./assets/residential.png" alt="Movie" />
+                            </figure>
+                            <div class="p-4 md:card-body">
+                                <h2 class="card-title font-bold text-accent">Residential</h2>
+                                <p class="text-[#737373] w-full md:w-9/12">The barn house captivates with its blend of
+                                    rustic charm and modern.</p>
+                            </div>
                         </div>
-                      </div>
+                    </div>
+                    <div class="max-w-max absolute hidden md:block -top-12 -left-12"><img src="./assets/Vector.png"
+                            alt=""></div>
                 </div>
-                <div class="max-w-max absolute hidden md:block -top-12 -left-12"><img src="./assets/Vector.png" alt=""></div>
-             </div>
-             <!-- section img -->
-             <div class="w-full mt-4 md:mt-0 md:w-1/2 flex justify-end">
-                <img src="./assets/Rectangle.png" alt="">
-             </div>
-           </div>
+                <!-- section img -->
+                <div class="w-full mt-4 md:mt-0 md:w-1/2 flex justify-end">
+                    <img src="./assets/Rectangle.png" alt="">
+                </div>
+            </div>
 
-           
-             <!-- state -->
-             <div class="py-8 md:py-10 px-2 md:px-18 shadow-2xl rounded-xl mt-28 flex flex-col md:flex-row space-y-6 md:space-y-0 justify-around">
+
+            <!-- state -->
+            <div
+                class="py-8 md:py-10 px-2 md:px-18 shadow-2xl rounded-xl mt-28 flex flex-col md:flex-row space-y-6 md:space-y-0 justify-around">
                 <!-- state box-1 -->
-                 <div class="flex flex-col justify-center items-center space-y-2">
+                <div class="flex flex-col justify-center items-center space-y-2">
                     <p><i class="fa-solid fa-message text-2xl"></i></p>
                     <h1 class="font-bold text-4xl text-accent">235+</h1>
                     <p class="text-[#737373] font-bold">Happy Client Review</p>
-                 </div>
-                 <!-- state box-2 -->
-                 <div class="flex flex-col justify-center items-center space-y-2">
+                </div>
+                <!-- state box-2 -->
+                <div class="flex flex-col justify-center items-center space-y-2">
                     <p><i class="fa-solid fa-house text-2xl"></i></p>
                     <h1 class="font-bold text-4xl text-accent">50+</h1>
                     <p class="text-[#737373] font-bold">Work Depertments</p>
-                 </div>
-                 <!-- state box-3 -->
-                 <div class="flex flex-col justify-center items-center space-y-2">
+                </div>
+                <!-- state box-3 -->
+                <div class="flex flex-col justify-center items-center space-y-2">
                     <p><i class="fa-solid fa-user text-2xl"></i></p>
                     <h1 class="font-bold text-4xl text-accent">30k+</h1>
                     <p class="text-[#737373] font-bold">Our Happy Client</p>
-                 </div>
-                 <!-- state box-4 -->
-                 <div class="flex flex-col justify-center items-center space-y-2">
+                </div>
+                <!-- state box-4 -->
+                <div class="flex flex-col justify-center items-center space-y-2">
                     <p><i class="fa-solid fa-clipboard-user text-2xl"></i></p>
                     <h1 class="font-bold text-4xl text-accent">307+</h1>
                     <p class="text-[#737373] font-bold">Staff Members</p>
-                 </div>
-              </div>
+                </div>
+            </div>
         </section>
 
         <!-- our Work Process -->
-         <section class="w-11/12 mx-auto mt-16 md:mt-28">
+        <section class="w-11/12 mx-auto mt-16 md:mt-28">
             <!-- section content -->
-             <div class="flex flex-col items-center space-y-4 w-full md:w-9/12 mx-auto mb-7">
-                <div class="text-center md:text-left"><button class="py-2 px-3 text-2xl text-accent font-bold rounded-3xl bg-white shadow-md"><i class="fa-solid fa-arrow-right"></i> About Us</button></div>
+            <div class="flex flex-col items-center space-y-4 w-full md:w-9/12 mx-auto mb-10">
+                <div class="text-center md:text-left"><button
+                        class="py-2 px-3 text-2xl text-accent font-bold rounded-3xl bg-white shadow-sm"><i
+                            class="fa-solid fa-arrow-right"></i> How we works</button></div>
                 <h1 class="font-bold text-3xl md:text-5xl text-secondary">Our Works Process</h1>
-                <p class="text-accent font-semibold w-8/12 text-center">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+                <p class="text-accent font-semibold w-8/12 text-center">The barn house captivates with its blend of
+                    rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
 
-             </div>
+            </div>
 
-             <!-- section card -->
-              <div class="flex flex-col md:flex-row gap-6">
+            <!-- section card -->
+            <div class="flex flex-col md:flex-row gap-6">
                 <!-- card-1 -->
-                 <div class="border p-3 md:p-6 bg-[#E7C1D3] rounded-xl">
+                <div class="border p-3 md:p-6 bg-[#E7C1D3] rounded-xl">
                     <img src="./assets/concept.png" alt="">
                     <h1 class="font-bold text-3xl mt-4">Concept</h1>
-                    <p class="text-accent font-semibold mt-2">The barn house captivates with its blend of rustic charm and modern.</p>
-                 </div>
+                    <p class="text-accent font-semibold mt-2">The barn house captivates with its blend of rustic charm
+                        and modern.</p>
+                </div>
                 <!-- card-2 -->
-                 <div class="border p-3 md:p-6 bg-[#EFDA6E] rounded-xl">
+                <div class="border p-3 md:p-6 bg-[#EFDA6E] rounded-xl">
                     <img src="./assets/flow-chart.png" alt="">
                     <h1 class="font-bold text-3xl mt-4">Disign Process</h1>
-                    <p class="text-accent font-semibold mt-2">The barn house captivates with its blend of rustic charm and modern.</p>
-                 </div>
+                    <p class="text-accent font-semibold mt-2">The barn house captivates with its blend of rustic charm
+                        and modern.</p>
+                </div>
                 <!-- card-3 -->
-                 <div class="border p-3 md:p-6 bg-[#A4DAC3] rounded-xl">
+                <div class="border p-3 md:p-6 bg-[#A4DAC3] rounded-xl">
                     <img src="./assets/vision.png" alt="">
                     <h1 class="font-bold text-3xl mt-4">Super Vision</h1>
-                    <p class="text-accent font-semibold mt-2">The barn house captivates with its blend of rustic charm and modern.</p>
-                 </div>
+                    <p class="text-accent font-semibold mt-2">The barn house captivates with its blend of rustic charm
+                        and modern.</p>
+                </div>
                 <!-- card-4 -->
-                 <div class="border p-3 md:p-6 bg-[#77AAEA] rounded-xl">
+                <div class="border p-3 md:p-6 bg-[#77AAEA] rounded-xl">
                     <img src="./assets/budget-planning.png" alt="">
                     <h1 class="font-bold text-3xl mt-4">Budget Planning</h1>
-                    <p class="text-accent font-semibold mt-2">The barn house captivates with its blend of rustic charm and modern.</p>
-                 </div>
-              </div>
-         </section>
+                    <p class="text-accent font-semibold mt-2">The barn house captivates with its blend of rustic charm
+                        and modern.</p>
+                </div>
+            </div>
+        </section>
+
+
+        <!-- Our latest Portfolio -->
+        <section class="w-11/12 mx-auto mt-16 md:mt-28 mb-8">
+            <!-- sectin content -->
+            <div class="flex flex-col items-center space-y-4 w-full md:w-9/12 mx-auto mb-10">
+                <div class="text-center md:text-left"><button
+                        class="p-1 md:py-2 md:px-3 md:text-2xl text-accent font-bold rounded-3xl bg-primary bg-opacity-10 shadow-sm"><i
+                            class="fa-solid fa-arrow-right"></i> Explore Oure Latest Works</button></div>
+                <h1 class="font-bold text-3xl md:text-5xl text-secondary">Our Latest Portfolio</h1>
+                <p class="text-accent font-semibold md:w-8/12 p-1 md:p-0 text-center">The barn house captivates with its blend of
+                    rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+
+            </div>
+
+
+            <!-- portfolio grid main box -->
+            <div class="grid grid-cols-1 md:grid-cols-12 gap-5">
+                <!-- box-1 -->
+                <div class="flex flex-col md:flex-row items-center gap-6 md:border shadow-lg rounded-md p-6 md:col-span-8 order-1">
+                    <div class="md:w-2/3"><img class="md:border-[2px] border-dashed" src="./assets/img1.png" alt=""></div>
+                    <div class="">
+                        <h1 class="text-3xl font-bold text-secondary mb-5">Comarcial</h1>
+                        <p class="text-accent">The barn house captivates with its blend of rustic charm and modern. The
+                            barn house captivates with its blend of rustic charm and modern .</p>
+                        <button
+                            class="w-full md:w-auto mt-3 rounded-3xl flex md:justify-center md:items-center space-x-2 font-bold">
+                            <p class="text-2xl">Vies Details</p>
+                            <p class="w-6 h-6 bg-primary rounded-full"><i
+                                    class="fa-solid fa-arrow-right -rotate-45 text-secondary "></i></p>
+                        </button>
+                    </div>
+                </div>
+
+                <!-- box-2 -->
+                <div class="md:border shadow-lg rounded-md p-6 md:col-span-4 md:flex md:items-center md:justify-center order-2">
+                    <div class="md:border-[2px] md:border-dashed"><img src="./assets/img2.png" alt=""></div>
+                </div>
+
+                <!-- box-3 -->
+                <div class="md:border shadow-lg rounded-md py-4 md:p-6 md:col-span-3 md:flex md:items-center md:justify-center order-5 md:order-3">
+                    <div class="flex justify-center"><img class="md:border-[2px] md:border-dashed" src="./assets/img3.png" alt=""></div>
+                </div>
+
+                <!-- box-4 -->
+
+                <div class="flex flex-col md:flex-row items-center gap-6 md:border shadow-lg rounded-md p-3 md:p-6 md:col-span-6 order-4">
+                    <img class="md:border-[2px] md:border-dashed" src="./assets/img4.png" alt="">
+                    <div>
+                        <h1 class="text-secondary text-3xl font-bold mb-5">Comarcial</h1>
+                        <p class="text-accent mb-5">The barn house captivates with its blend of rustic charm and modern. </p>
+                        <button
+                            class="w-full md:w-auto rounded-3xl flex md:justify-center md:items-center space-x-2 font-bold">
+                            <p class="text-2xl">Vies Details</p>
+                            <p class="w-6 h-6 bg-primary rounded-full"><i
+                                    class="fa-solid fa-arrow-right -rotate-45 text-secondary "></i></p>
+                        </button>
+
+                    </div>
+                </div>
+
+
+                <!-- box-5 -->
+                <div class="md:border shadow-lg rounded-md py-4 md:p-6 md:col-span-3 md:flex md:items-center md:justify-center order-3 md:order-5">
+                    <div class="flex justify-center"><img class="md:border-[2px] md:border-dashed" src="./assets/img5.png" alt=""></div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
