Article section complete

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-them="light">
 
 <head>
     <meta charset="UTF-8">
@@ -41,7 +41,7 @@
 </head>
 
 <body class="max-w-[1440px] mx-auto">
-    <header class="w-11/12 bg-custom-gradient mx-auto shadow-md pb-6">
+    <header class="w-11/12 bg-custom-gradient mx-auto shadow-sm pb-4 md:pb-10">
         <!-- navbar -->
         <div class="navbar bg-base-100 font-Manrope">
             <div class="navbar-start w-full md:w-1/2 flex-row-reverse md:flex-row justify-between md:justify-start">
@@ -244,14 +244,15 @@
 
 
         <!-- Our latest Portfolio -->
-        <section class="w-11/12 mx-auto mt-16 md:mt-28 mb-8">
+        <section class="w-11/12 mx-auto mt-16 md:mt-28">
             <!-- sectin content -->
             <div class="flex flex-col items-center space-y-4 w-full md:w-9/12 mx-auto mb-10">
                 <div class="text-center md:text-left"><button
                         class="p-1 md:py-2 md:px-3 md:text-2xl text-accent font-bold rounded-3xl bg-primary bg-opacity-10 shadow-sm"><i
                             class="fa-solid fa-arrow-right"></i> Explore Oure Latest Works</button></div>
                 <h1 class="font-bold text-3xl md:text-5xl text-secondary">Our Latest Portfolio</h1>
-                <p class="text-accent font-semibold md:w-8/12 p-1 md:p-0 text-center">The barn house captivates with its blend of
+                <p class="text-accent font-semibold md:w-8/12 p-1 md:p-0 text-center">The barn house captivates with its
+                    blend of
                     rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
 
             </div>
@@ -260,8 +261,10 @@
             <!-- portfolio grid main box -->
             <div class="grid grid-cols-1 md:grid-cols-12 gap-5">
                 <!-- box-1 -->
-                <div class="flex flex-col md:flex-row items-center gap-6 md:border shadow-lg rounded-md p-6 md:col-span-8 order-1">
-                    <div class="md:w-2/3"><img class="md:border-[2px] border-dashed" src="./assets/img1.png" alt=""></div>
+                <div
+                    class="flex flex-col md:flex-row items-center gap-6 md:border shadow-lg rounded-md p-6 md:col-span-8 order-1">
+                    <div class="md:w-2/3"><img class="md:border-[2px] border-dashed" src="./assets/img1.png" alt="">
+                    </div>
                     <div class="">
                         <h1 class="text-3xl font-bold text-secondary mb-5">Comarcial</h1>
                         <p class="text-accent">The barn house captivates with its blend of rustic charm and modern. The
@@ -276,22 +279,27 @@
                 </div>
 
                 <!-- box-2 -->
-                <div class="md:border shadow-lg rounded-md p-6 md:col-span-4 md:flex md:items-center md:justify-center order-2">
+                <div
+                    class="md:border shadow-lg rounded-md p-6 md:col-span-4 md:flex md:items-center md:justify-center order-2">
                     <div class="md:border-[2px] md:border-dashed"><img src="./assets/img2.png" alt=""></div>
                 </div>
 
                 <!-- box-3 -->
-                <div class="md:border shadow-lg rounded-md py-4 md:p-6 md:col-span-3 md:flex md:items-center md:justify-center order-5 md:order-3">
-                    <div class="flex justify-center"><img class="md:border-[2px] md:border-dashed" src="./assets/img3.png" alt=""></div>
+                <div
+                    class="md:border shadow-lg rounded-md py-4 md:p-6 md:col-span-3 md:flex md:items-center md:justify-center order-5 md:order-3">
+                    <div class="flex justify-center"><img class="md:border-[2px] md:border-dashed"
+                            src="./assets/img3.png" alt=""></div>
                 </div>
 
                 <!-- box-4 -->
 
-                <div class="flex flex-col md:flex-row items-center gap-6 md:border shadow-lg rounded-md p-3 md:p-6 md:col-span-6 order-4">
+                <div
+                    class="flex flex-col md:flex-row items-center gap-6 md:border shadow-lg rounded-md p-3 md:p-6 md:col-span-6 order-4">
                     <img class="md:border-[2px] md:border-dashed" src="./assets/img4.png" alt="">
                     <div>
                         <h1 class="text-secondary text-3xl font-bold mb-5">Comarcial</h1>
-                        <p class="text-accent mb-5">The barn house captivates with its blend of rustic charm and modern. </p>
+                        <p class="text-accent mb-5">The barn house captivates with its blend of rustic charm and modern.
+                        </p>
                         <button
                             class="w-full md:w-auto rounded-3xl flex md:justify-center md:items-center space-x-2 font-bold">
                             <p class="text-2xl">Vies Details</p>
@@ -304,8 +312,127 @@
 
 
                 <!-- box-5 -->
-                <div class="md:border shadow-lg rounded-md py-4 md:p-6 md:col-span-3 md:flex md:items-center md:justify-center order-3 md:order-5">
-                    <div class="flex justify-center"><img class="md:border-[2px] md:border-dashed" src="./assets/img5.png" alt=""></div>
+                <div
+                    class="md:border shadow-lg rounded-md py-4 md:p-6 md:col-span-3 md:flex md:items-center md:justify-center order-3 md:order-5">
+                    <div class="flex justify-center"><img class="md:border-[2px] md:border-dashed"
+                            src="./assets/img5.png" alt=""></div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Article aand News section -->
+        <section class="w-11/12 mx-auto mt-16 md:mt28">
+            <!-- sectin content -->
+            <div class="flex flex-col items-center space-y-4 w-full md:w-9/12 mx-auto mb-10">
+                <div class="text-center md:text-left"><button
+                        class="p-1 md:py-2 md:px-3 md:text-2xl text-accent font-bold rounded-3xl bg-primary bg-opacity-10 shadow-sm"><i
+                            class="fa-solid fa-arrow-right"></i> Rinterio News</button></div>
+                <h1 class="font-bold text-3xl md:text-5xl text-secondary text-center">Read Our Articles and News</h1>
+                <p class="text-accent font-semibold md:w-8/12 p-1 md:p-0 text-center">The barn house captivates with its
+                    blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+
+            </div>
+
+            <!-- section card main -->
+            <div class="flex flex-col md:flex-row gap-4 md:justify-around">
+                <!-- card-1 -->
+                <div class=" bg-base-100 md:w-96 shadow-xl pb-3">
+                    <figure class="px-10 pt-10">
+                        <img src="./assets/article1.png" alt="Article-1"
+                            class="rounded-xl border-[2px] border-dashed" />
+                    </figure>
+                    <div class="pl-10">
+                        <div class="my-2">
+                            <div class="space-x-3 flex ">
+                                <div class="mr-4">
+                                    <i class="fa-solid fa-calendar-days"></i>
+                                    <span>July14, 2024</span>
+                                </div>
+                                <div>
+                                    <i class="fa-solid fa-user"></i>
+                                    <span>By Admin</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div>
+                            <h1 class="text-xl md:text-2xl font-bold text-secondary mb-2">How to choose the furniture right of your home.</h1>
+                            <p class="text-[#737373] mb-2">The barn house captivates with its blend of rustic charm and modern.</p>
+                        </div>
+                        <div class="">
+                            <button
+                            class="w-full md:w-auto mt-3 rounded-3xl flex md:justify-center md:items-center space-x-2 font-bold">
+                            <p class="text-xl md:text-2xl">Vies Details</p>
+                            <p class="w-6 h-6 bg-primary rounded-full"><i
+                                    class="fa-solid fa-arrow-right -rotate-45 text-secondary "></i></p>
+                        </button>
+                        </div>
+                    </div>
+                </div>
+                <!-- card-2 -->
+                <div class=" bg-base-100 md:w-96 shadow-xl pb-3">
+                    <figure class="px-10 pt-10">
+                        <img src="./assets/article2.png" alt="Article-1"
+                            class="rounded-xl border-[2px] border-dashed" />
+                    </figure>
+                    <div class="pl-10">
+                        <div class="my-2">
+                            <div class="space-x-3 flex ">
+                                <div class="mr-4">
+                                    <i class="fa-solid fa-calendar-days"></i>
+                                    <span>July14, 2024</span>
+                                </div>
+                                <div>
+                                    <i class="fa-solid fa-user"></i>
+                                    <span>By Admin</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div>
+                            <h1 class="text-xl md:text-2xl font-bold text-secondary mb-2">How to choose the furniture right of your home.</h1>
+                            <p class="text-[#737373] mb-2">The barn house captivates with its blend of rustic charm and modern.</p>
+                        </div>
+                        <div class="">
+                            <button
+                            class="w-full md:w-auto mt-3 rounded-3xl flex md:justify-center md:items-center space-x-2 font-bold">
+                            <p class="text-xl md:text-2xl">Vies Details</p>
+                            <p class="w-6 h-6 bg-primary rounded-full"><i
+                                    class="fa-solid fa-arrow-right -rotate-45 text-secondary "></i></p>
+                        </button>
+                        </div>
+                    </div>
+                </div>
+                <!-- card-3 -->
+                <div class=" bg-base-100 md:w-96 shadow-xl pb-3">
+                    <figure class="px-10 pt-10">
+                        <img src="./assets/article3.png" alt="Article-1"
+                            class="rounded-xl border-[2px] border-dashed" />
+                    </figure>
+                    <div class="pl-10">
+                        <div class="my-2">
+                            <div class="space-x-3 flex ">
+                                <div class="mr-4">
+                                    <i class="fa-solid fa-calendar-days"></i>
+                                    <span>July14, 2024</span>
+                                </div>
+                                <div>
+                                    <i class="fa-solid fa-user"></i>
+                                    <span>By Admin</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="pr-1">
+                            <h1 class="text-xl md:text-2xl font-bold text-secondary mb-2">How to choose the furniture right of your home.</h1>
+                            <p class="text-[#737373] mb-2">The barn house captivates with its blend of rustic charm and modern.</p>
+                        </div>
+                        <div class="">
+                            <button
+                            class="w-full md:w-auto mt-3 rounded-3xl flex md:justify-center md:items-center space-x-2 font-bold">
+                            <p class="text-xl md:text-2xl">Vies Details</p>
+                            <p class="w-6 h-6 bg-primary rounded-full"><i
+                                    class="fa-solid fa-arrow-right -rotate-45 text-secondary "></i></p>
+                        </button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
