form sectin added

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             </div>
         </div>
         <!-- banner -->
-        <div class="hero min-h-screen">
+        <div class="hero ">
             <div class="mt-8 text-center">
                 <div class="flex flex-col justify-center items-center">
                     <div><img src="./assets/banner.png" alt=""></div>
@@ -263,7 +263,7 @@
                 <!-- box-1 -->
                 <div
                     class="flex flex-col md:flex-row items-center gap-6 md:border shadow-lg rounded-md p-6 md:col-span-8 order-1">
-                    <div class="md:w-2/3"><img class="md:border-[2px] border-dashed" src="./assets/img1.png" alt="">
+                    <div class="md:w-2/3"><img src="./assets/img1.png" alt="">
                     </div>
                     <div class="">
                         <h1 class="text-3xl font-bold text-secondary mb-5">Comarcial</h1>
@@ -281,21 +281,20 @@
                 <!-- box-2 -->
                 <div
                     class="md:border shadow-lg rounded-md p-6 md:col-span-4 md:flex md:items-center md:justify-center order-2">
-                    <div class="md:border-[2px] md:border-dashed"><img src="./assets/img2.png" alt=""></div>
+                    <div><img src="./assets/img2.png" alt=""></div>
                 </div>
 
                 <!-- box-3 -->
                 <div
                     class="md:border shadow-lg rounded-md py-4 md:p-6 md:col-span-3 md:flex md:items-center md:justify-center order-5 md:order-3">
-                    <div class="flex justify-center"><img class="md:border-[2px] md:border-dashed"
-                            src="./assets/img3.png" alt=""></div>
+                    <div class="flex justify-center"><img src="./assets/img3.png" alt=""></div>
                 </div>
 
                 <!-- box-4 -->
 
                 <div
                     class="flex flex-col md:flex-row items-center gap-6 md:border shadow-lg rounded-md p-3 md:p-6 md:col-span-6 order-4">
-                    <img class="md:border-[2px] md:border-dashed" src="./assets/img4.png" alt="">
+                    <img src="./assets/img4.png" alt="">
                     <div>
                         <h1 class="text-secondary text-3xl font-bold mb-5">Comarcial</h1>
                         <p class="text-accent mb-5">The barn house captivates with its blend of rustic charm and modern.
@@ -314,8 +313,7 @@
                 <!-- box-5 -->
                 <div
                     class="md:border shadow-lg rounded-md py-4 md:p-6 md:col-span-3 md:flex md:items-center md:justify-center order-3 md:order-5">
-                    <div class="flex justify-center"><img class="md:border-[2px] md:border-dashed"
-                            src="./assets/img5.png" alt=""></div>
+                    <div class="flex justify-center"><img src="./assets/img5.png" alt=""></div>
                 </div>
             </div>
         </section>
@@ -338,8 +336,7 @@
                 <!-- card-1 -->
                 <div class=" bg-base-100 md:w-96 shadow-xl pb-3">
                     <figure class="px-10 pt-10">
-                        <img src="./assets/article1.png" alt="Article-1"
-                            class="rounded-xl border-[2px] border-dashed" />
+                        <img src="./assets/article1.png" alt="Article-1" class="rounded-xl border-[2px]" />
                     </figure>
                     <div class="pl-10">
                         <div class="my-2">
@@ -355,24 +352,25 @@
                             </div>
                         </div>
                         <div>
-                            <h1 class="text-xl md:text-2xl font-bold text-secondary mb-2">How to choose the furniture right of your home.</h1>
-                            <p class="text-[#737373] mb-2">The barn house captivates with its blend of rustic charm and modern.</p>
+                            <h1 class="text-xl md:text-2xl font-bold text-secondary mb-2">How to choose the furniture
+                                right of your home.</h1>
+                            <p class="text-[#737373] mb-2">The barn house captivates with its blend of rustic charm and
+                                modern.</p>
                         </div>
                         <div class="">
                             <button
-                            class="w-full md:w-auto mt-3 rounded-3xl flex md:justify-center md:items-center space-x-2 font-bold">
-                            <p class="text-xl md:text-2xl">Vies Details</p>
-                            <p class="w-6 h-6 bg-primary rounded-full"><i
-                                    class="fa-solid fa-arrow-right -rotate-45 text-secondary "></i></p>
-                        </button>
+                                class="w-full md:w-auto mt-3 rounded-3xl flex md:justify-center md:items-center space-x-2 font-bold">
+                                <p class="text-xl md:text-2xl">Vies Details</p>
+                                <p class="w-6 h-6 bg-primary rounded-full"><i
+                                        class="fa-solid fa-arrow-right -rotate-45 text-secondary "></i></p>
+                            </button>
                         </div>
                     </div>
                 </div>
                 <!-- card-2 -->
                 <div class=" bg-base-100 md:w-96 shadow-xl pb-3">
                     <figure class="px-10 pt-10">
-                        <img src="./assets/article2.png" alt="Article-1"
-                            class="rounded-xl border-[2px] border-dashed" />
+                        <img src="./assets/article2.png" alt="Article-1" class="rounded-xl border-[2px]" />
                     </figure>
                     <div class="pl-10">
                         <div class="my-2">
@@ -388,24 +386,25 @@
                             </div>
                         </div>
                         <div>
-                            <h1 class="text-xl md:text-2xl font-bold text-secondary mb-2">How to choose the furniture right of your home.</h1>
-                            <p class="text-[#737373] mb-2">The barn house captivates with its blend of rustic charm and modern.</p>
+                            <h1 class="text-xl md:text-2xl font-bold text-secondary mb-2">How to choose the furniture
+                                right of your home.</h1>
+                            <p class="text-[#737373] mb-2">The barn house captivates with its blend of rustic charm and
+                                modern.</p>
                         </div>
                         <div class="">
                             <button
-                            class="w-full md:w-auto mt-3 rounded-3xl flex md:justify-center md:items-center space-x-2 font-bold">
-                            <p class="text-xl md:text-2xl">Vies Details</p>
-                            <p class="w-6 h-6 bg-primary rounded-full"><i
-                                    class="fa-solid fa-arrow-right -rotate-45 text-secondary "></i></p>
-                        </button>
+                                class="w-full md:w-auto mt-3 rounded-3xl flex md:justify-center md:items-center space-x-2 font-bold">
+                                <p class="text-xl md:text-2xl">Vies Details</p>
+                                <p class="w-6 h-6 bg-primary rounded-full"><i
+                                        class="fa-solid fa-arrow-right -rotate-45 text-secondary "></i></p>
+                            </button>
                         </div>
                     </div>
                 </div>
                 <!-- card-3 -->
                 <div class=" bg-base-100 md:w-96 shadow-xl pb-3">
                     <figure class="px-10 pt-10">
-                        <img src="./assets/article3.png" alt="Article-1"
-                            class="rounded-xl border-[2px] border-dashed" />
+                        <img src="./assets/article3.png" alt="Article-1" class="rounded-xl border-[2px]" />
                     </figure>
                     <div class="pl-10">
                         <div class="my-2">
@@ -421,18 +420,75 @@
                             </div>
                         </div>
                         <div class="pr-1">
-                            <h1 class="text-xl md:text-2xl font-bold text-secondary mb-2">How to choose the furniture right of your home.</h1>
-                            <p class="text-[#737373] mb-2">The barn house captivates with its blend of rustic charm and modern.</p>
+                            <h1 class="text-xl md:text-2xl font-bold text-secondary mb-2">How to choose the furniture
+                                right of your home.</h1>
+                            <p class="text-[#737373] mb-2">The barn house captivates with its blend of rustic charm and
+                                modern.</p>
                         </div>
                         <div class="">
                             <button
-                            class="w-full md:w-auto mt-3 rounded-3xl flex md:justify-center md:items-center space-x-2 font-bold">
-                            <p class="text-xl md:text-2xl">Vies Details</p>
-                            <p class="w-6 h-6 bg-primary rounded-full"><i
-                                    class="fa-solid fa-arrow-right -rotate-45 text-secondary "></i></p>
-                        </button>
+                                class="w-full md:w-auto mt-3 rounded-3xl flex md:justify-center md:items-center space-x-2 font-bold">
+                                <p class="text-xl md:text-2xl">Vies Details</p>
+                                <p class="w-6 h-6 bg-primary rounded-full"><i
+                                        class="fa-solid fa-arrow-right -rotate-45 text-secondary "></i></p>
+                            </button>
                         </div>
                     </div>
+                </div>
+            </div>
+        </section>
+
+
+        <!-- Contact Form section -->
+        <section class="mt-16 md:mt-28 bg-form_bg bg-cover bg-center bg-no-repeat">
+            <div class="w-full h-full bg-white bg-opacity-60 pt-5 md:p-24">
+                <!-- sectin content -->
+                <div class="flex flex-col items-center space-y-4 w-full md:w-9/12 mx-auto my-10">
+                    <div class="text-center md:text-left"><button
+                            class="p-1 md:py-2 md:px-3 md:text-2xl text-accent font-bold rounded-3xl bg-primary bg-opacity-10 shadow-sm"><i
+                                class="fa-solid fa-arrow-right"></i> Let's connect</button></div>
+                    <h1 class="font-bold text-2xl md:text-5xl text-secondary text-center">Let’s Discuss Next Project
+                    </h1>
+                    <p class="text-accent font-semibold md:w-11/12 p-1 md:p-0 text-center">The barn house captivates
+                        with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal
+                        accents.</p>
+
+                </div>
+
+                <!-- form -->
+                <div class="w-full md:w-2/3 p-3 mx-auto">
+                    <form class="w-full grid grid-cols-1 md:grid-cols-2 gap-2 md:gap-6">
+                        <div class="w-full h-14 col-span-1">
+                            <input class="w-full h-full border-none outline-none rounded-full pl-6" type="text" name=""
+                                id="" placeholder="Frist Name">
+                        </div>
+                        <div class="w-full h-14 col-span-1">
+                            <input class="w-full h-full border-none outline-none rounded-full pl-6" type="text" name=""
+                                id="" placeholder="Last Name">
+                        </div>
+                        <div class="w-full h-14 col-span-1">
+                            <input class="w-full h-full border-none outline-none rounded-full pl-6" type="number"
+                                name="" id="" placeholder="Phone">
+                        </div>
+                        <div class="w-full h-14 col-span-1">
+                            <input class="w-full h-full border-none outline-none rounded-full pl-6" type="email" name=""
+                                id="" placeholder="Email">
+                        </div>
+
+                        <div class="w-full md:col-span-2">
+                            <textarea class="w-full h-40 p-3 rounded-3xl" name="" id="" placeholder="Write your message here"></textarea>
+                        </div>
+
+                        <div class="w-full h-14 md:col-span-2">
+                            <button
+                                class="w-full bg-primary py-3 px-4 rounded-3xl flex justify-center space-x-2 font-bold">
+                                <p>Vies Details</p>
+                                <p class="w-6 h-6 bg-secondary rounded-full"><i
+                                        class="fa-solid fa-arrow-right -rotate-45 text-white "></i></p>
+                            </button>
+                            
+                        </div>
+                    </form>
                 </div>
             </div>
         </section>
