--- a/index.html
+++ b/index.html
@@ -476,25 +476,54 @@
                         </div>
 
                         <div class="w-full md:col-span-2">
-                            <textarea class="w-full h-40 p-3 rounded-3xl" name="" id="" placeholder="Write your message here"></textarea>
+                            <textarea class="w-full h-40 p-3 rounded-3xl" name="" id=""
+                                placeholder="Write your message here"></textarea>
                         </div>
 
                         <div class="w-full h-14 md:col-span-2">
                             <button
                                 class="w-full bg-primary py-3 px-4 rounded-3xl flex justify-center space-x-2 font-bold">
-                                <p>Vies Details</p>
+                                <p>Send Mail</p>
                                 <p class="w-6 h-6 bg-secondary rounded-full"><i
                                         class="fa-solid fa-arrow-right -rotate-45 text-white "></i></p>
                             </button>
-                            
+
                         </div>
                     </form>
                 </div>
             </div>
         </section>
     </main>
-    <footer>
+    <footer class="bg-[#1C1C1C] p-6 md:py-10 mt-4">
+        <div class="flex flex-col items-center space-y-4 w-full md:w-9/12 mx-auto my-10">
+            <div class="">
+                <button
+                    class="w-full md:w-auto mt-3 rounded-3xl flex md:justify-center md:items-center space-x-2 font-bold">
+                    <p class="w-6 h-6 bg-primary rounded-full">
+                        <i class="fa-solid fa-arrow-right -rotate-45 text-secondary "></i>
+                    </p>
+                    <p class="text-xl md:text-2xl text-white">Rinterio</p>
 
+                </button>
+            </div>
+
+            <p class="text-white text-opacity-30 font-semibold md:w-9/12 p-1 md:p-0 text-center">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal accents.</p>
+
+        </div>
+        <div class="text-white text-opacity-70 flex flex-col md:flex-row items-center space-y-3 justify-around w-8/12 mx-auto">
+            <p><a href="">Home</a></p>
+            <p><a href="">Service</a></p>
+            <p><a href="">Portfolio</a></p>
+            <p><a href="">Blogs</a></p>
+            <p><a href="">Contact Us</a></p>
+        </div>
+        <div class="flex justify-center mt-10 p-4">
+                <button class="w-full md:w-auto bg-primary py-2 px-3 rounded-3xl flex justify-center space-x-1 font-bold">
+                    <p>Book Consult</p>
+                    <p class="w-6 h-6 bg-[#1C1C1C] rounded-full"><i
+                            class="fa-solid fa-arrow-right -rotate-45 text-white"></i></p>
+                </button>
+        </div>
     </footer>
 
 </body>
