extra section has been modified and responsive

--- a/index.html
+++ b/index.html
@@ -448,8 +448,8 @@
              <div class="py-7 px md:p-20 my-10 md:my-24 grid grid-cols-1 md:grid-cols-2 bg-client-gradient rounded-lg">
                 <!-- content -->
                 <div class="flex flex-col justify-center">
-                    <div class="w-full md:w-5/6">
-                        <h1 class="text-5xl leading-tight font-bold mb-3">Meet Our Valued <br> Clients</h1>
+                    <div class="w-full md:w-5/6 pl-2">
+                        <h1 class="text-3xl md:text-5xl leading-tight font-bold mb-3">Meet Our Valued <br> Clients</h1>
                         <p class="mb-4">Discover the trusted partnerships we've built with industry leaders who rely on our
                             expertise and innovative solutions. Our long-standing relationships are a testament to the value
                             we bring to the table, as we collaborate closely with top professionals to drive growth and
